--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express.js": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4"
   }
 }
