--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 CLOUDINARY_CLOUD_NAME=sridhar1
 CLOUDINARY_API_KEY=965318861936582
 CLOUDINARY_API_SECRET=0hkwaFrZeF5RzrdNOR5osOzygfI
+MONGO_URI=mongodb://localhost:27017/B&B
+PORT=3000
