--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,14 @@
 CLOUDINARY_CLOUD_NAME=sridhar1
 CLOUDINARY_API_KEY=965318861936582
 CLOUDINARY_API_SECRET=0hkwaFrZeF5RzrdNOR5osOzygfI
-MONGO_URI=mongodb://localhost:27017/B&B
+
 PORT=3000
+MONGO_URI=mongodb+srv://pavan:pavan164142@cluster0.emlif0i.mongodb.net
+
+
+
+ACCESS_TOKEN_SECRET=yJ0e-XAiOiJKV1QiL_CJhbGciOiJIUzI1NiJ9_eyJ1c2VyX2lkIjoxLCJleHAiOjE2MjIzMjYzOTl9iJ69
+ACCESS_TOKEN_EXPIRY=1d
+
+REFRESH_TOKEN_SECRET=eyJ0eXA-iOiJKV1QiLCJh_bG-ciOiJIUzI1Ni_J9eyJ1c2VyX2lkIjoxLCJleHAiOjE2Mj_I4NDcxOTl9
+REFRESH_TOKEN_EXPIRY=7d
