--- a/Backend/.env
+++ b/Backend/.env
@@ -1,9 +1,9 @@
-CLOUDINARY_CLOUD_NAME=sridhar1
-CLOUDINARY_API_KEY=965318861936582
-CLOUDINARY_API_SECRET=0hkwaFrZeF5RzrdNOR5osOzygfI
+CLUODINARY_CLOUD_NAME=pavan164142
+CLOUDINARY_API_KEY=278846962131122
+CLOUDINARY_API_SECRET=Rx-V2Ssbdtmj1riNyqDn27UcXBc
 
 PORT=3000
-MONGO_URI=mongodb+srv://pavan:pavan164142@cluster0.emlif0i.mongodb.net
+MONGO_URI=mongodb+srv://random53763:random53763@cluster0.hzpopuv.mongodb.net
 
 
 
