--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,11 @@
     "@cloudinary/url-gen": "^1.19.0",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "prettier": "^3.3.2",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
+    "react-chat-engine-advanced": "^0.1.28",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
