--- a/Backend/.env
+++ b/Backend/.env
@@ -6,13 +6,13 @@ PORT=3000
 MONGO_URI=mongodb+srv://random53763:random53763@cluster0.hzpopuv.mongodb.net
 
 
-CHAT_ENGINE_PRIVATE_KEY=ff07bef3-4e5a-4398-92ca-c2137aa1a05e
-CHAT_ENGINE_PROJECT_ID=b0b2185b-7f85-4d90-9d57-ff445fa30162
-
-
-
 ACCESS_TOKEN_SECRET=yJ0e-XAiOiJKV1QiL_CJhbGciOiJIUzI1NiJ9_eyJ1c2VyX2lkIjoxLCJleHAiOjE2MjIzMjYzOTl9iJ69
 ACCESS_TOKEN_EXPIRY=1d
 
 REFRESH_TOKEN_SECRET=eyJ0eXA-iOiJKV1QiLCJh_bG-ciOiJIUzI1Ni_J9eyJ1c2VyX2lkIjoxLCJleHAiOjE2Mj_I4NDcxOTl9
 REFRESH_TOKEN_EXPIRY=7d
+
+
+
+MY_EMAIL=random53763@gmail.com
+MY_PASSWORD=fqllnszflzxyfwle
