--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
     "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "prettier": "^3.3.2",
     "react": "^18.2.0",
