--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express.js": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
