--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "socket.io": "^4.7.5"
   },
   "type": "module"
 }
