add chat endpoint

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,7 +3,7 @@ CLOUDINARY_API_KEY=965318861936582
 CLOUDINARY_API_SECRET=0hkwaFrZeF5RzrdNOR5osOzygfI
 
 PORT=3000
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://random53763:random53763@cluster0.hzpopuv.mongodb.net
 
 
 ACCESS_TOKEN_SECRET=yJ0e-XAiOiJKV1QiL_CJhbGciOiJIUzI1NiJ9_eyJ1c2VyX2lkIjoxLCJleHAiOjE2MjIzMjYzOTl9iJ69
