--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@iconscout/react-unicons": "^2.0.2",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
