--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,10 @@
     "prettier": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.5",
+    "timeago.js": "^4.0.0-beta.3",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
