--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.0-beta.3",
     "zustand": "^4.5.4"
   },
