--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express.js": "^1.0.0",
