--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,18 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "src/index.js",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/home" }]
 }
